--- a/src/main/resources/monopoly/interface/GamePlay.fxml
+++ b/src/main/resources/monopoly/interface/GamePlay.fxml
@@ -15,6 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -722,6 +723,40 @@
                                     <Font size="20.0" />
                                  </font>
                               </Button>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane fx:id="negativeAction" disable="true" layoutX="7.0" layoutY="208.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" opacity="0.0" prefHeight="369.0" prefWidth="586.0" style="-fx-background-color: #d7d6d0;">
+                           <children>
+                              <Label layoutX="129.0" text="Случаилось происшетсвие!">
+                                 <font>
+                                    <Font size="27.0" />
+                                 </font>
+                              </Label>
+                              <Button layoutX="135.0" layoutY="194.0" mnemonicParsing="false" onAction="#negativePay" prefHeight="44.0" prefWidth="125.0" text="Заплатить">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Button>
+                              <ImageView fitHeight="142.0" fitWidth="163.0" layoutX="431.0" layoutY="276.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../dice.png" />
+                                 </image>
+                              </ImageView>
+                              <Label fx:id="negativeNotEnoughMoney" layoutX="141.0" layoutY="131.0" opacity="0.0" text="У вас не хватает денег!" textFill="#a11339">
+                                 <font>
+                                    <Font size="30.0" />
+                                 </font>
+                              </Label>
+                              <Button layoutX="318.0" layoutY="194.0" mnemonicParsing="false" onAction="#negativeSurrender" prefHeight="44.0" prefWidth="125.0" text="Сдаться">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Button>
+                              <Text fx:id="negativeText" layoutX="6.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="570.13671875">
+                                 <font>
+                                    <Font size="24.0" />
+                                 </font>
+                              </Text>
                            </children>
                         </AnchorPane>
                      </children>
